syntax = "proto3";

package user.v1;

option go_package = "github.com/ryo034/react-go-template/apps/system/api/schema/pb/user/v1";

message User {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  optional string phone = 5;
}
